# UnityStandaloneFileBrowser

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  package.json
Assets/Sample/: CanvasSampleOpenFileImage.cs  CanvasSampleOpenFileText.cs  CanvasSampleOpenFileTextMultiple.cs  CanvasSampleSaveFileImage.cs  CanvasSampleScene.unity
Assets/StandaloneFileBrowser/: IStandaloneFileBrowser.cs  StandaloneFileBrowser.asmdef  StandaloneFileBrowser.cs  StandaloneFileBrowserEditor.cs  StandaloneFileBrowserLinux.cs  StandaloneFileBrowserMac.cs  StandaloneFileBrowserWindows.cs  package.json
Assets/StandaloneFileBrowser/Plugins/: StandaloneFileBrowser.jslib
Assets/StandaloneFileBrowser/Sample/: BasicSample.cs  BasicSampleScene.unity  CanvasSampleOpenFileImage.cs  CanvasSampleOpenFileText.cs  CanvasSampleOpenFileTextMultiple.cs  CanvasSampleSaveFileImage.cs  CanvasSampleSaveFileText.cs  CanvasSampleScene.unity  StandaloneFileBrowserSample.cs
Assets/StandaloneFileBrowser/Wrappers/: AwaitableStandaloneFileBrowser.cs
Package/: StandaloneFileBrowser.unitypackage
Plugins/Linux/StandaloneFileBrowser/: .gitignore  CMakeLists.txt  Makefile  dialog.c  library.c  library.h  main.c
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  ProjectVersion.txt
Runtime/: eu.netherlands3d.filebrowser.Runtime.asmdef
Runtime/Prefabs/: UserFileUploads.prefab
Runtime/Scripts/: AddFileInputSelection.cs  DrawHTMLOverCanvas.cs  FileInputIndexedDB.cs  FileOpen.cs  StandaloneFileBrowserWebGL.cs
Samples~/showFileNames/: SimpleSample.unity
UserSettings/: EditorUserSettings.asset
(+17 files in other folders)
